lab1/Test/L1-A-8-21.cmm
float IExN8xLZdf18qE ( int Q7 ) {
}
struct E3DRPOb4Z1Drc Xew 
;
int dqQM0t 
;
int E3id1_Fmbo , MBU7 

;
struct {
  int < bIPmePajv8TExmVcwQ ;
  int VvLPeRYXAQrYTITbyV = PZ1 < fyu * ! - XqZ7A_uCce 
    [ u = RjLIAgD_agJorcQHuBkV || Gn75m7343txnt2QzVAUm 
    && XhK376DAS5LksYqb0M <= gaFMwOaxALlSHKPh6nvr + O8lQwo1mt0pQO 
    / gcyYdK ( Dyfm2 = P4POlqucwHt0ji != ciIu9MTjmnHGZElNkl0 
    - ! ( oHKEXCxhrlC9bORY > vg1WA8wnM0HPChbSwO17 / ( 
    Oll == jpqcG_Q * DiBEB8F ( ETuj2UAWHmppsBwb , QSUgAKYSo8VEqXr 
    = B0hWiHmucnlXLnos = sP3K7ZqybGFfUHH9NSK >= UfYd5gXFSkmRg9Nrhpm 
    - ( xu7UPa8o = dfcwSp5DY  && jMhkyL0t5v4 ) / ! luzFlorwd2R9XIcGNZS 
    ) . AYmixmjNksi ) ) / - ! ! ! xR3RvOYHyu3qjy98T23 
    + 2006307284 / LhjDeLSJIOgJ ( ) ) . pofl4LxVatn ] 
    - 1860440152.826918486 , kAzgWuSKUkj [ 971674633 ] 
    ;
};
int Y9JbSU ( ) {
  jurtBlIJMUwGcB9Z ;
  if ( uKTh_VcQBce4VXS_sk )   if ( NvAs4PjB9l12owOw2p 
    ) {
    struct KIxD_b {
    }m7K54_fCpnpjV_jz5DQ ;
    ipG1Eqtq ;
    i73V_gTO ;
  }else   if ( a )   while ( lTFByYBpgY2pxRZW2 ) {
    if ( FKa )     BKuTLscnUT37BzK ;
else     if ( hF1aztRmx )     FQTVPKkrfxR8qnd ;


    R ;
  }



  if ( k_HXTfi )   G7oc54Oyc5ne6AxS4u9 ;
else   return OfHdQhembH6b1d9_KZef ;

}
int ;
int ;
int ;
int ;
int _ewjPcKnlJxv70LgG ( int tPDrFzNuoFfN , int bv104WzrawxAhpSNTCJ 
  ) {
}
